# Open_Data_Platform

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
odep/metamind/: .env.example  .env.test.example  .gitignore  ACTIONABLE_FIX_TRACKER_v104.md  Dockerfile  Dockerfile.gpu  FEATURE_VERIFICATION.md  GAP_ANALYSIS_FULL_CODEBASE_v104.md  GAP_ANALYSIS_v104.md  GTM_EXEC_SUMMARY.md  GTM_FOCUS_GUIDE.md  GTM_STRATEGY_AND_EXECUTION_GUIDE.md  HARNESS_TESTING_GUIDE.md  LAYMAN_END_TO_END_GUIDE.md  MARKET_COMPARISON_AND_HOLDING_ADVANTAGES.md  Makefile  PROJECT_SUMMARY.md  README.md  README_UNIQUE_FEATURES.md  SESSION_HANDOFF_v104.md  STATUS_TRACKER.md  SYNTHETIC_DATA_UI_GAP_REVIEW.md  docker-compose.yml  fixes.md  pyproject.toml  requirements-gpu.txt  requirements.txt
odep/metamind/.github/workflows/: ci.yml  release.yml
odep/metamind/benchmarks/: bench_cardinality.py  bench_connectors.py  bench_join_enumeration.py  bench_optimizer.py  bench_plan_cache.py  run_all.py
odep/metamind/benchmarks/results/: baseline.json
odep/metamind/docs/: API.md  architecture.md  configuration.md  deployment.md  development.md  engineering.md  index.md  monitoring.md  roadmap.md  saas_blueprint.md  security_model.md  troubleshooting.md  whitepaper.md
odep/metamind/docs/testing_guides/: CACHE_TESTING_GUIDE.md  CDC_FRESHNESS_TESTING_GUIDE.md  ML_TESTING_GUIDE.md  OBSERVABILITY_TESTING_GUIDE.md  QUERY_ROUTING_PIPELINE_TESTING_GUIDE.md  SECURITY_TESTING_GUIDE.md  TESTING_GUIDES_INDEX.md
odep/metamind/frontend/: package.json  package_phase5.json  tsconfig_phase5.json  vite.config.ts
odep/metamind/frontend/src/: App.tsx  index.css
odep/metamind/helm/: Chart.yaml  values.yaml
odep/metamind/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
odep/metamind/infra/monitoring/: docker-compose.monitoring.yml
odep/metamind/infra/terraform/: eks.tf  main.tf  monitoring.tf  outputs.tf  variables.tf
odep/metamind/metamind/: __init__.py  bootstrap.py  bootstrap_pipeline.py  bootstrap_tasks.py  version.py
odep/metamind/metamind/api/: ROUTER_MAP.md  __init__.py  ab_routes.py  admin_routes.py  admin_routes_ext.py  audit_routes.py  auth.py  billing_routes.py  federation_router.py  graphql_gateway.py  metadata_routes.py  middleware.py  models.py  onboarding_routes.py  query_logger.py  query_routes.py  routes_phase2.py  routes_phase5.py  security_middleware.py  server.py  sql_parser.py  trace_routes.py
odep/metamind/metamind/cache/: __init__.py  result_cache.py
odep/metamind/metamind/cdc/: debezium_manager.py  iceberg_pipeline.py  outbound_webhook.py  streaming_pipeline.py
odep/metamind/metamind/cli/: __init__.py  main.py  shell.py
odep/metamind/metamind/client/: python_client.py
odep/metamind/metamind/config/: __init__.py  feature_flags.py  settings.py  settings_phase5.py
odep/metamind/metamind/core/: __init__.py  pipeline.py  (+11 more)
odep/metamind/migrations/: 001_core.sql  002_partitions.sql  003_materialized_views.sql  004_masking.sql  005_metadata_version.sql  006_learned_cardinality.sql  007_correlation_stats.sql  008_query_checkpoints.sql  009_cdc_status.sql  010_cloud_budgets.sql  011_regret_tracking.sql  012_federated_mvs.sql  013_data_placement.sql  014_vector_search.sql  015_nl_queries.sql  016_feature_flags.sql  017_learned_models.sql  018_federated_sources.sql  019_skew_detection.sql  020_workload_classification.sql  021_routing_policies.sql  022_synthesis.sql  023_budget_tracking.sql  024_reserved.sql  025_reserved.sql  026_rls_policies.sql  027_query_firewall.sql  028_cdc_webhooks.sql  029_ab_tests.sql  030_billing_export.sql  031_sla_enforcement.sql  032_failover_events.sql  033_anomaly_events.sql  034_seed_default_tenant.sql
odep/metamind/monitoring/: prometheus.yml
odep/metamind/scripts/: RUN_ALL_TEST_GUIDES.sh  apply_migrations.sh  compile_all.py  generate_sdk.py  load_synthetic_data.py  quality_check.py  setup_test_env.sh  validate_imports.py
odep/metamind/tests/: __init__.py  conftest.py
(+332 files in other folders)
