[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odep"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
    "duckdb>=0.10",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prometheus-client>=0.19",
]

[project.scripts]
odep = "odep.cli.main:odep"

[tool.setuptools.packages.find]
where = ["."]
include = ["odep*"]
